# NanoWebUI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: auth.py  gateway.py  main.py  nanobot_config.py  providers.py  token.py
backend/app/routes/: auth.py  config.py  gateway.py  logs.py  providers.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Button.tsx  Card.tsx  Input.tsx  Layout.tsx  Toggle.tsx
frontend/src/pages/: ConfigEditor.tsx  Dashboard.tsx  ForcePasswordChange.tsx  Login.tsx  ProvidersPage.tsx  SettingsPage.tsx  ToolsPage.tsx
frontend/src/stores/: auth.ts  config.ts  gateway.ts  providers.ts
~/.config/opencode/: tui.json
~/.local/share/opencode/add-dir/: directories.json
